--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,11 +20,14 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          name: Run Tests
-          command: ./gradlew lint test
-      - store_artifacts:
-          path: app/build/reports
-          destination: reports
-      - store_test_results:
-          path: app/build/test-results
+#      - run:
+#          name: Run Tests
+#          command: ./gradlew lint test
+#      - store_artifacts:
+#          path: app/build/reports
+#          destination: reports
+#      - store_test_results:
+#          path: app/build/test-results
+    - store_artifacts:
+        path: app/build/outputs/apk/debug
+        destination: apkss
