--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,4 +30,4 @@ jobs:
 #          path: app/build/test-results
     - store_artifacts:
         path: app/build/outputs/apk/debug
-        destination: apkss
+        destination: apk
