--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,5 +29,5 @@ jobs:
 #      - store_test_results:
 #          path: app/build/test-results
       - store_artifacts:
-        path: app/build/outputs/apk/debug
-        destination: apk
+          path: app/build/outputs/apk/debug
+          destination: apk_folder
