--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,4 +40,4 @@ jobs:
       - run:
           name: Upload to Slack
           command: |
-            curl -F file=@app/build/outputs/apk/debug/app-debug.apk -F "initial_comment=export latest debug apk" -F channels=sumyattesting -F token=$TOKEN -F title="production app" https://slack.com/api/files.upload
+            curl -F file=@app/build/outputs/apk/debug/app-debug.apk -F "initial_comment=export latest debug apk" -F channels=sumyattesting -F token=$TOKEN -F title="debug app" https://slack.com/api/files.upload
